# RayTracing-Series

./: README.md
rayTracing/in_one_weekend/: CMakeLists.txt  camera.h  hittable.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
rayTracing/the_next_week/: CMakeLists.txt  aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  rtweekend.h  sphere.h
rayTracing_with_taichi/in_one_weekend/: 00.py  01.py  02.py  03.py
rayTracing_with_taichi/in_one_weekend/test/: test.py
rayTracing_with_taichi/path_tracing_taichi/: Camera.py  README.md  hittable.py  object.py  path_tracing.py  ray_tracing_models.py  ray_tracing_tools.py
